--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -113,7 +113,6 @@ nav {
 .custom-bo {
     border: 0.5px solid #8D759A;
     height: 15px;
-    // margin-top: 10px;
 }
 
 .company-status-bar {
@@ -277,10 +276,14 @@ nav {
     .navbar-nav {
         align-items: flex-start;
     }
+
+    .market-status {
+        width: 125%;
+    }
 }
 
 // for mobile view
-@media screen and (max-width: 766px) {
+@media screen and (max-width: 767px) {
     .market-status {
         flex-direction: column;
         align-items: center;
@@ -288,9 +291,54 @@ nav {
 
     .company-status-bar {
         width: 300%;
+
+        ul {
+            li {
+                .co-title {
+                    font-size: 10px!important;
+                }
+    
+                .value {
+                    font-size: 15px!important;
+                }
+            }
+        }
+
     }
 
     .main-block {
         margin: 12px 0px;
+    }
+
+    .market-status {
+        width: 100%;
+    }
+}
+
+
+@media screen and (max-width: 1380px) {
+    #myTab {
+        flex-wrap: nowrap !important;
+        overflow: auto;
+        overflow-y: hidden;
+
+        button {
+            height: 80px;
+            max-height: 100px;
+        }
+    }
+
+    .company-status-bar ul li {
+        .co-img {
+            width: 60px;
+        }
+
+        .co-title {
+            font-size: 8px;
+        }
+
+        .value {
+            font-size: 13px;
+        }
     }
 }
